Add: author-table template

--- a/_layouts/authors.html
+++ b/_layouts/authors.html
@@ -4,8 +4,7 @@ layout: default
 
 <h2>{{ page.title }}</h2>
 
-{% include page-intro.html %}
+{% include author-table.html %}
 
 {{ content }}
 
-{% include contact-form.html %}
