update authors template

--- a/_includes/author-table.html
+++ b/_includes/author-table.html
@@ -25,6 +25,7 @@
           <p><strong>Class Standing:</strong> Junior</p>
 
           <h3>Hannah Schultz</h3>
+          <img src="assets/img/uploads/HS.jpg" class="rounded-circle" style="width:400px; height:300px;"><br>
           <p><strong>Major:</strong> Computer Science</p>
           <p><strong>Minor:</strong> Political Science</p>
           <p><strong>Class Standing:</strong> Senior</p>
