--- a/_includes/author-table.html
+++ b/_includes/author-table.html
@@ -1,6 +1,6 @@
 <body>
     <!-- https://wisdmlabs.com/blog/responsive-tables-using-css-div-tag/ -->
-    <div>    
+    <div class="container">    
       <div class="row">
         <div class="col-md-6">  
           <img src="assets/img/EMMA_SQ.jpg" class="rounded-circle" style="width:400px; height:300px;"><br>
