--- a/_includes/author-table.html
+++ b/_includes/author-table.html
@@ -3,7 +3,7 @@
     <div class="container">    
       <div class="row">
         <div class="col-md-6">  
-          <img src="assets/img/I.jpg" class="rounded-circle" style="width:400px; height:400px;"><br>
+          <img src="assets/img/uploadsI.jpg" class="rounded-circle" style="width:400px; height:400px;"><br>
           <h3>India McCruter</h3>
           <p><strong>Major:</strong>  </p>
           <p><strong>Minor:</strong>  </p>
@@ -15,7 +15,7 @@
           <p><strong>Minor:</strong> Chinese</p>
           <p><strong>Class Standing:</strong> Junior</p><br>  
 
-          <img src="assets/img/E.jpg" class="rounded-circle" style="width:400px; height:400px;"><br>
+          <img src="assets/img/uploadsE.jpg" class="rounded-circle" style="width:400px; height:400px;"><br>
           <h3>Edward Veliz</h3>
           <p><strong>Major:</strong> Political Science</p>
           <p><strong>Minor:</strong> Spanish</p>
