--- a/_includes/button1.html
+++ b/_includes/button1.html
@@ -1,3 +1,3 @@
 <form>
-    <input style="margin: auto; padding: 20px; cursor: pointer; box-shadow: 6px 6px 5px; #999; -webkit-box-shadow: 6px 6px 5px #999; -moz-box-shadow: 6px 6px 5px #999; font-weight: bold; background: rgba(100,122,20,1); color: #FFF; border-radius: 10px; border: 1px solid #999; font-size: 150%;" type="button" value="Learn More" onclick="window.location.href='" />
+    <input style="margin: auto; padding: 20px; cursor: pointer; box-shadow: 6px 6px 5px; #999; -webkit-box-shadow: 6px 6px 5px #999; -moz-box-shadow: 6px 6px 5px #999; font-weight: bold; background: rgba(100,122,20,1); color: #FFF; border-radius: 10px; border: 1px solid #999; font-size: 150%;" type="button" value="Learn More" onclick="window.location.href='https://forms.gle/gqDG1rJp4gUU4WWS8'" />
     </form><br>
