Update authors table

--- a/_includes/author-table.html
+++ b/_includes/author-table.html
@@ -5,8 +5,8 @@
         <div class="col-md-6">  
           <img src="assets/img/uploads/I.jpg" class="rounded-circle" style="width:400px; height:400px;"><br>
           <h3>India McCruter</h3>
-          <p><strong>Major:</strong>  </p>
-          <p><strong>Minor:</strong>  </p>
+          <p><strong>Major:</strong> Political Science  </p>
+          <p><strong>Minor:</strong>  Philosophy</p>
           <p><strong>Class Standing:</strong> Sophomore</p>
     
           <img src="assets/img/KW_SQ.jpg" class="rounded-circle" style="width:400px; height:400px;"><br>
