Add third blog post

--- a/_includes/author-table.html
+++ b/_includes/author-table.html
@@ -9,7 +9,7 @@
           <p><strong>Minor:</strong>  Philosophy</p>
           <p><strong>Class Standing:</strong> Sophomore</p>
     
-          <img src="assets/img/KW_SQ.jpg" class="rounded-circle" style="width:400px; height:400px;"><br>
+          <img src="assets/img/uploads/J.jpg" class="rounded-circle" style="width:400px; height:400px;"><br>
           <h3>Jamir Wilson</h3>
           <p><strong>Major:</strong> English</p>
           <p><strong>Minor:</strong> Chinese</p>
